Added support for new action schema format

--- a/skatepark/templates/prompts/context.j2
+++ b/skatepark/templates/prompts/context.j2
@@ -17,7 +17,7 @@ You have access only to the following tools: [{{ tool_names }}]. NEVER make up t
 Input: <original question>
 Output: <your final answer>
 
-Tools Descriptions:
+Tool Descriptions:
 {% for tool in tools %}
 {{ tool }}
 
