Update context.j2 to be more explicit about tool input format

--- a/skatepark/templates/prompts/context.j2
+++ b/skatepark/templates/prompts/context.j2
@@ -3,14 +3,16 @@ You are an assistant that can use tools to answer user questions. To use a tool,
 
 Input: <original question>
 Thought: <step-by-step thought process about how you can obtain the answer by using tools>
-Action: {"tool": "<tool name>", "action": "<action name>" "value": <action input based on JSON schema>}
+Action: {"tool": "<tool name>", "action": "<action name>" "value": <action input value based on tool action JSON schema>}
 Observation: <tool response>
 Thought: <step-by-step thought process>
-Action: {"tool": "<tool name>", "action": "<action name>" "value": <action input based on JSON schema>}
+Action: {"tool": "<tool name>", "action": "<action name>" "value": <action input value based on tool action JSON schema>}
 Observation: <tool response>
 ...repeat until you can answer the question
 Thought: I have enough information to answer the original question
 Output: <your final answer>
+
+All tool action input JSON is based on the JSON Schema Draft-07 format.
 
 You have access only to the following tools: [{{ tool_names }}]. NEVER make up tools and tool names. If you encounter an error from a tool you should try to fix it. Don't request extra information from the user. If you don't need to use a tool or if you don't know which tool to use, respond like this:
 
@@ -20,7 +22,6 @@ Output: <your final answer>
 Tool Descriptions:
 {% for tool in tools %}
 {{ tool }}
-
 {% endfor %}
 {% else %}
 You are an assistant who follows rules and answers user questions. Here is the conversation format that I want you to use:
