--- a/skatepark/templates/prompts/context.j2
+++ b/skatepark/templates/prompts/context.j2
@@ -19,7 +19,7 @@ You have access only to the following tools: [{{ tool_names }}]. NEVER make up t
 Input: <original question>
 Output: <your final answer>
 
-Tool Descriptions:
+# Tool Descriptions
 {% for tool in tools %}
 {{ tool }}
 {% endfor %}
