--- a/skatepark/templates/prompts/steps/tool/substep.j2
+++ b/skatepark/templates/prompts/steps/tool/substep.j2
@@ -1,11 +1,7 @@
 {% if substep.thought %}
 Thought: {{ substep.thought }}
 {% endif %}
-{% if substep.tool_name and substep.tool_input %}
-Action: {"tool": "{{ substep.tool_name }}", "input": "{{ substep.tool_input }}"}
-{% elif substep.tool_name %}
-Action: {"tool": "{{ substep.tool_name }}"}
-{% endif %}
+Action: {{ substep.to_json() }}
 {% if substep.output %}
 Observation: {{ substep.output.value }}
 {% endif %}
