--- a/griptape/flow/templates/prompts/context.j2
+++ b/griptape/flow/templates/prompts/context.j2
@@ -1,5 +1,5 @@
 {% if tools|length > 0 %}
-You are an assistant that follows rules and can use tools to answer questions and complete tasks. To use a tool, use this structure:
+You are an assistant that follows rules and can use tools to answer questions and complete tasks one at a time. To use a tool, use this structure:
 
 Input: <original request>
 Thought: <step-by-step thought process about how you can complete the request>
